# gwy-mcp

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  ROADMAP.md  pyproject.toml
data/reference_essays/: essay_bank.json
desktop/: backend.py  build.bat  run.bat
desktop/frontend/: package-lock.json  package.json
desktop/frontend/src/: App.tsx  api.ts
desktop/frontend/src-tauri/: tauri.conf.json
desktop/frontend/src/pages/: EssayPage.tsx  MatchPage.tsx  ProfilePage.tsx
scripts/: smoke_test.py
src/gwy_mcp/: __init__.py  config.py  server.py
src/gwy_mcp/data/: major_classification.json  major_patches.json
src/gwy_mcp/engines/: __init__.py  essay_grader.py  position_matcher.py
src/gwy_mcp/llm/: __init__.py  _prompt.py  client.py
src/gwy_mcp/models/: __init__.py  schemas.py
src/gwy_mcp/tools/: __init__.py  essay_grade.py  input_handler.py  parse_announcement.py  position_match.py  user_profile.py
